change image size

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Maryam Ghiasvand</h1>
-        <img src="profile.jpg" alt="Profile"/>
+        <img src="profile.jpg" alt="Profile" width="200" height="200"/>
         <ul>
             <li></li>
 
