--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <h1>Maryam Ghiasvand</h1>
         <img src="profile.jpg" alt="Profile" width="200" height="200"/>
         <ul>
-            <li></li>
+            <li><a href="https://MaryamGhiasvand.github.io/pie.html">Homework 1: Recipe</a></li>
+            <li><a href="https://MaryamGhiasvand.github.io/aboutme.html">Homework 1: About me</a></li>
 
         </ul>
         <a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
