--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,7 @@
                 <p>Happy:</p>
             </div>
             <div class="inner_block">
-                <img src="images/HappyMood.jpeg" alt="Happy">
+                <img src="images/happyMood.jpeg" alt="Happy">
             </div>
             <div class="inner_block">
                 <p>Energetic:</p>
