--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <li><a href="https://MaryamGhiasvand.github.io/tmnt.html">Homework 3: Movie Review</a></li>
             <li><a href="https://MaryamGhiasvand.github.io/H3.html">Homework 4: Responsive Page</a></li>
             <li><a href="https://MaryamGhiasvand.github.io/script.html">Homework 4: Scripts</a></li>
-            <li><a href="https://MaryamGhiasvand.github.io/basicJavascript.html">Homework 5: Basic Javescripts</a></li>
+            <li><a href="https://MaryamGhiasvand.github.io/BasicJavascript.html">Homework 5: Basic Javescripts</a></li>
             <li><a href="https://MaryamGhiasvand.github.io/animation.html">Homework 11: ASCIIanimation</a></li>
         </ul>
         <a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
